--- a/server.conf
+++ b/server.conf
@@ -2,7 +2,8 @@
 default_bits = 4096
 default_md = sha384d
 efault_keyfile = server.key
-prompt = nodistinguished_name = dn
+prompt = no
+distinguished_name = dn
 [dn]
 C = US
 ST = server
