--- a/root.conf
+++ b/root.conf
@@ -7,7 +7,7 @@ distinguished_name = req_distinguished_name
 [ req_distinguished_name ]
 countryName = "CN"
 localityName = "GZ"
-organizationName = "root"
-organizationalUnitName = "root"
-commonName = "root certificate"
+organizationName = "you name"
+organizationalUnitName = "you name"
+commonName = "you name certificate"
 emailAddress = "root.example.com"
